GITForce/src/objects/tblStudent__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishakapatnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeypore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Koraput</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhuwaneshwar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raivellore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FatherName__c</fullName>
        <label>FatherName</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GFatherName__c</fullName>
        <label>GFatherName</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HouseNo__c</fullName>
        <label>HouseNo</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <picklist>
            <picklistValues>
                <fullName>INDIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamil Nadu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StudStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>StudStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StudentName__c</fullName>
        <label>StudentName</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>tblStudent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StudentName__c</columns>
        <columns>Password__c</columns>
        <columns>FatherName__c</columns>
        <columns>GFatherName__c</columns>
        <columns>StudStatus__c</columns>
        <columns>DOB__c</columns>
        <columns>Telephone__c</columns>
        <columns>HouseNo__c</columns>
        <columns>Nationality__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <columns>Gender__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>tblStudents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>